Virada de chave

--- a/pagina/conteudo_gratuito.html
+++ b/pagina/conteudo_gratuito.html
@@ -198,7 +198,7 @@
 
   <!-- Seção de CTAs: Gratuito + Upgrade -->
   <section class="fade-in-section">
-    <div class="grid md:grid-cols-2 gap-8">
+    <div class="max-w-2xl mx-auto">
       
       <!-- Coluna Esquerda: Downloads Gratuitos -->
       <div class="space-y-6">
@@ -252,71 +252,26 @@
           </div>
 
           <div class="mt-6 pt-6 border-t border-blue-400">
-            <p class="text-sm text-blue-100 text-center">
+            <p class="text-sm text-blue-100 text-center mb-4">
               ✨ Downloads gratuíto • Compartilhe com amigos • Sem custo algum
             </p>
           </div>
-        </div>
-      </div>
 
-      <!-- Coluna Direita: Upgrade para Coleção Completa -->
-      <div class="space-y-6">
-        <div class="bg-gradient-to-br from-brand-gold to-orange-400 text-blue-900 rounded-2xl p-8 shadow-xl">
-          <div class="text-center mb-6">
-            <div class="inline-block bg-blue-900 text-brand-gold px-4 py-2 rounded-full font-bold mb-4">
-              ⭐ COLEÇÃO COMPLETA
+          <!-- Botão de Upgrade -->
+          <div class="mt-6">
+            <div class="bg-gradient-to-r from-green-500 to-green-600 rounded-xl p-6 text-center">
+              <p class="text-white font-bold text-lg mb-2">🔥 Quer Acesso Completo?</p>
+              <p class="text-green-100 text-sm mb-4">Todas as histórias + ilustrações + atualizações vitalícias</p>
+              <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="inline-block bg-white hover:bg-gray-50 text-green-600 px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl transform hover:scale-105">
+                🎁 Adquirir Coleção Completa por R$ 19,90
+              </a>
+              <p class="text-green-100 text-xs mt-3">Pagamento único • Acesso vitalicio • 80% OFF</p>
             </div>
-            <h3 class="font-serif text-2xl font-bold mb-2">Quer Ainda Mais Conteúdo?</h3>
-            <p class="text-blue-800">Acesse todas as histórias e ilustrações</p>
-          </div>
-
-          <div class="bg-white/20 backdrop-blur-sm rounded-xl p-6 mb-6">
-            <h4 class="font-bold text-lg mb-3">🎯 Com as coleções completas você ganha:</h4>
-            <ul class="space-y-2 text-sm">
-              <li class="flex items-start">
-                <span class="text-blue-900 mr-2">✓</span>
-                <span>Acesso vitalício a todos os materiais</span>
-              </li>
-              <li class="flex items-start">
-                <span class="text-blue-900 mr-2">✓</span>
-                <span>Novas histórias e ilustrações mensais</span>
-              </li>
-              <li class="flex items-start">
-                <span class="text-blue-900 mr-2">✓</span>
-                <span>Suporte e guias pedagógicos exclusivos</span>
-              </li>
-              <li class="flex items-start">
-                <span class="text-blue-900 mr-2">✓</span>
-                <span>Material premium de alta qualidade</span>
-              </li>
-            </ul>
-          </div>
-
-          <div class="space-y-4">
-            <a href="/historias_biblicas" class="block bg-blue-900 hover:bg-blue-800 text-brand-gold px-8 py-4 rounded-lg font-bold text-center transition-all shadow-lg hover:shadow-xl">
-              <div class="flex items-center justify-center gap-2">
-                <i data-lucide="book" class="w-5 h-5"></i>
-                <span>Garantir coleção completa \o/</span>
-              </div>
-              <p class="text-xs text-blue-200 mt-1">Histórias Bíblicas Ilustradas</p>
-            </a>
-
-            <a href="/ilustracoes_biblicas" class="block bg-blue-900 hover:bg-blue-800 text-brand-gold px-8 py-4 rounded-lg font-bold text-center transition-all shadow-lg hover:shadow-xl">
-              <div class="flex items-center justify-center gap-2">
-                <i data-lucide="palette" class="w-5 h-5"></i>
-                <span>Ver Coleção de Ilustrações</span>
-              </div>
-              <p class="text-xs text-blue-200 mt-1">Ilustrações e Atividades</p>
-            </a>
-          </div>
-
-          <div class="mt-6 pt-6 border-t border-orange-500">
-            <p class="text-sm text-blue-800 text-center font-bold">
-              🔥 Valor promocional por tempo limitado!
-            </p>
           </div>
         </div>
       </div>
+
+
 
     </div>
   </section>
@@ -335,10 +290,6 @@
         <a href="https://www.instagram.com/herdeirosdapromessa.t/" target="_blank" class="inline-flex items-center gap-2 bg-gradient-to-r from-purple-500 to-pink-500 hover:from-purple-600 hover:to-pink-600 text-white px-8 py-4 rounded-lg font-bold transition-all shadow-lg hover:shadow-xl">
           <i data-lucide="instagram" class="w-5 h-5"></i>
           Seguir no Instagram
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61584457560182" target="_blank" class="inline-flex items-center gap-2 bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg font-bold transition-all shadow-lg hover:shadow-xl">
-          <i data-lucide="facebook" class="w-5 h-5"></i>
-          Seguir no Facebook
         </a>
       </div>
     </div>
