--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -170,7 +170,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="#comparacao" class="bg-brand-blue text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-blue-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+          <a href="/pagina/adquira_ja.html" class="bg-brand-blue text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-blue-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Adquirir Agora
           </a>
         </div>
@@ -222,7 +222,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="#comparacao" class="bg-green-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-green-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+          <a href="/pagina/adquira_ja.html" class="bg-green-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-green-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Quero Esta Coleção
           </a>
         </div>
@@ -280,7 +280,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="#comparacao" class="bg-purple-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-purple-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+          <a href="/pagina/adquira_ja.html" class="bg-purple-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-purple-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🛒 Adquirir Coleção
           </a>
         </div>
@@ -326,7 +326,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="#comparacao" class="bg-red-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-red-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+          <a href="/pagina/adquira_ja.html" class="bg-red-600 text-white px-8 py-4 rounded-xl font-bold text-center hover:bg-red-700 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             🎄 Garantir Minha Cópia
           </a>
         </div>
@@ -334,37 +334,7 @@
     </div>
   </section>
 
-  <!-- SEÇÃO COMPARAÇÃO / COMPRE TODAS -->
-  <section id="comparacao" class="bg-gradient-to-br from-brand-blue to-blue-900 text-white rounded-3xl p-12 text-center fade-in-section">
-    <h2 class="font-serif text-3xl md:text-4xl font-bold mb-4">🎁 Pacote Completo: TODAS as Coleções</h2>
-    <p class="text-xl text-blue-100 mb-8 max-w-2xl mx-auto">Garanta acesso imediato às 4 coleções com desconto especial! Muitas histórias bíblicas para transformar a vida espiritual dos seus filhos. Fique atento, esse é um pacote por tempo limitado! Em breve cada coleção será comercializada separadamente. Aproveite 💚</p>
-    
-    <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-8 mb-8 max-w-3xl mx-auto">
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-left">
-        <div class="flex items-center gap-3">
-          <i data-lucide="check-circle" class="w-6 h-6 text-brand-gold flex-shrink-0"></i>
-          <span>Histórias Bíblicas Ilustradas</span>
-        </div>
-        <div class="flex items-center gap-3">
-          <i data-lucide="check-circle" class="w-6 h-6 text-brand-gold flex-shrink-0"></i>
-          <span>Aprendendo a Orar</span>
-        </div>
-        <div class="flex items-center gap-3">
-          <i data-lucide="check-circle" class="w-6 h-6 text-brand-gold flex-shrink-0"></i>
-          <span>Tesouros do Coração</span>
-        </div>
-        <div class="flex items-center gap-3">
-          <i data-lucide="check-circle" class="w-6 h-6 text-brand-gold flex-shrink-0"></i>
-          <span>Especial de Natal</span>
-        </div>
-      </div>
-    </div>
 
-    <a href="https://pay.cakto.com.br/3bnvjd5_668646" target="_blank" class="inline-block bg-brand-gold text-blue-900 px-12 py-5 rounded-xl font-bold text-xl hover:bg-yellow-400 transition-all shadow-2xl hover:shadow-3xl transform hover:-translate-y-1">
-      💎 Adquirir Pacote Completo Por Apenas R$ 14,90
-    </a>
-    <p class="text-sm text-blue-200 mt-4">✅ Acesso imediato após a compra • 📧 Entrega por email • 💯 Garantia de satisfação</p>
-  </section>
 
 </main>
 
