--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -171,7 +171,7 @@
                         <div class="mt-6">
                             <div class="flex justify-center">
                                 <a href="/historias_biblicas" class="w-full text-center bg-brand-blue text-white px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-blue-800 transition-all hover:shadow-xl transform hover:-translate-y-1">
-                                    Adquira Todas as Coleções
+                                    Saber mais sobre as Histórias Bíblicas
                                 </a>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
                         Encante sua casa com lindas atividades bíblicas para seu filho pintar e se divertir. Arte que comunica a santidade e a beleza do Evangelho.
                     </p>
                     <a href="/ilustracoes_biblicas" class="inline-block bg-brand-gold text-blue-900 px-8 py-3 rounded-lg font-bold shadow-lg hover:bg-yellow-400 transition-all hover:shadow-xl transform hover:-translate-y-1">
-                        Adquirir Coleção de Artes
+                        Saber mais sobre a Coleção de Artes
                     </a>
                 </div>
             </div>
