--- a/pagina/adquira_ja.html
+++ b/pagina/adquira_ja.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adquira Já! — Herdeiros da Promessa | Oferta Especial de Lançamento</title>
+    <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -548,6 +549,13 @@
   </div>
 </footer>
 
+<!-- Botão Voltar ao Topo -->
+<button id="backToTop" class="fixed bottom-8 right-8 bg-brand-gold hover:bg-brand-gold-dark text-brand-blue p-4 rounded-full shadow-2xl opacity-0 invisible transition-all duration-300 z-50 hover:scale-110" style="z-index: 9999;" aria-label="Voltar ao topo">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+  </svg>
+</button>
+
 <script>
   // Autoplay do vídeo quando estiver visível
   document.addEventListener('DOMContentLoaded', function() {
@@ -614,6 +622,32 @@
       }
     });
   });
+  
+  // Botão Voltar ao Topo
+  (function() {
+    const backToTopBtn = document.getElementById('backToTop');
+    
+    if (backToTopBtn) {
+      // Mostrar/ocultar botão ao rolar
+      window.addEventListener('scroll', function() {
+        if (window.pageYOffset > 300) {
+          backToTopBtn.style.opacity = '1';
+          backToTopBtn.style.visibility = 'visible';
+        } else {
+          backToTopBtn.style.opacity = '0';
+          backToTopBtn.style.visibility = 'hidden';
+        }
+      });
+      
+      // Voltar ao topo ao clicar
+      backToTopBtn.addEventListener('click', function() {
+        window.scrollTo({
+          top: 0,
+          behavior: 'smooth'
+        });
+      });
+    }
+  })();
 </script>
 <script src="/pagina/js/load-nav.js"></script>
 </body>
