--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -481,5 +481,32 @@
             }
         });
     </script>
+    
+    <!-- Botão Voltar ao Topo -->
+    <button id="backToTop" class="fixed bottom-8 right-8 bg-brand-gold hover:bg-brand-gold-dark text-brand-blue p-4 rounded-full shadow-2xl opacity-0 invisible transition-all duration-300 z-50 hover:scale-110" style="z-index: 9999;" aria-label="Voltar ao topo">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+      </svg>
+    </button>
+    
+    <script>
+      (function() {
+        const backToTopBtn = document.getElementById('backToTop');
+        if (backToTopBtn) {
+          window.addEventListener('scroll', function() {
+            if (window.pageYOffset > 300) {
+              backToTopBtn.style.opacity = '1';
+              backToTopBtn.style.visibility = 'visible';
+            } else {
+              backToTopBtn.style.opacity = '0';
+              backToTopBtn.style.visibility = 'hidden';
+            }
+          });
+          backToTopBtn.addEventListener('click', function() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+          });
+        }
+      })();
+    </script>
 </body>
 </html>
