--- a/pagina/adquira_ja.html
+++ b/pagina/adquira_ja.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Google Analytics -->
+    <script src="js/analytics.js" defer></script>
+    
     <script>
       tailwind.config = {
         theme: {
