--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -19,6 +19,9 @@
     <!-- Importando CSS Personalizado -->
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Google Analytics -->
+    <script src="js/analytics.js" defer></script>
+
     <script>
         tailwind.config = {
             theme: {
