--- a/pagina/adquira_ja.html
+++ b/pagina/adquira_ja.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adquira Já! — Herdeiros da Promessa | Oferta Especial de Lançamento</title>
+    <meta name="description" content="Adquira a coleção completa de histórias bíblicas ilustradas para crianças. Oferta especial de lançamento com desconto exclusivo. Materiais educativos cristãos de alta qualidade.">
+    <meta name="keywords" content="comprar histórias bíblicas, coleção bíblica infantil, materiais cristãos, livros bíblicos para crianças, oferta histórias bíblicas, livros para colorir bíblicos, e-books cristão,
+    histórias bíblicas ilustradas, atividades bíblicas para crianças, a bíblia em cores, alfabetização cristã, ensino bíblico infantil,
+    materiais educativos cristãos, promoção lançamento livros bíblicos, livros para pintar cristãos, devocionais infantis, oração para crianças, valores cristãos para crianças,
+    ensinando os filhos a orar, oração diaria com os filhos">
+    <link rel="canonical" href="https://herdeirosdapromessa.com/pagina/adquira_ja.html">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://herdeirosdapromessa.com/pagina/adquira_ja.html">
+    <meta property="og:title" content="Adquira Já! — Herdeiros da Promessa | Oferta Especial">
+    <meta property="og:description" content="Coleção completa de histórias bíblicas ilustradas para crianças com desconto exclusivo de lançamento.">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
