--- a/pagina/conteudo_gratuito.html
+++ b/pagina/conteudo_gratuito.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conteúdo Gratuito — Herdeiros da Promessa</title>
+    <title>Conteúdo Gratuito — Herdeiros da Promessa | Materiais Bíblicos Grátis</title>
+    <meta name="description" content="Baixe gratuitamente histórias bíblicas ilustradas, atividades de alfabetização cristã e materiais educativos para ensinar a Palavra de Deus às crianças.">
+    <meta name="keywords" content="materiais bíblicos grátis, histórias bíblicas gratuitas, atividades cristãs para crianças, download materiais cristãos">
+    <link rel="canonical" href="https://herdeirosdapromessa.com/pagina/conteudo_gratuito.html">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
