--- a/pagina/sobre_nos.html
+++ b/pagina/sobre_nos.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sobre Nós — Herdeiros da Promessa</title>
+  <meta name="description" content="Conheça a missão da Herdeiros da Promessa: apresentar a Bíblia às crianças de forma suave, acolhedora e visualmente encantadora. A Palavra de Deus como a maior carta de amor.">
+  <meta name="keywords" content="sobre herdeiros da promessa, missão cristã, ensino bíblico infantil, educação cristã">
+  <link rel="canonical" href="https://herdeirosdapromessa.com/sobre-nos/">
   <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
