--- a/historias_biblicas/index.html
+++ b/historias_biblicas/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Redirecting...</title>
+  <title>Histórias Bíblicas Ilustradas — Herdeiros da Promessa</title>
+  <meta name="description" content="Histórias bíblicas ilustradas para crianças: Aprendendo a Orar, Café com Deus, Natal, Tesouros do Coração e muito mais. Conteúdos educativos cristãos.">
+  <meta name="keywords" content="histórias bíblicas ilustradas, bíblia para crianças, histórias infantis cristãs, ensino bíblico">
+  <link rel="canonical" href="https://herdeirosdapromessa.com/historias_biblicas/">
+  <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
   <script>window.location.href='/pagina/historias_biblicas.html';</script>
 </head>
 <body>Redirecionando...</body>
