--- a/pagina/adquira_ja.html
+++ b/pagina/adquira_ja.html
@@ -9,12 +9,12 @@
     histórias bíblicas ilustradas, atividades bíblicas para crianças, a bíblia em cores, alfabetização cristã, ensino bíblico infantil,
     materiais educativos cristãos, promoção lançamento livros bíblicos, livros para pintar cristãos, devocionais infantis, oração para crianças, valores cristãos para crianças,
     ensinando os filhos a orar, oração diaria com os filhos">
-    <link rel="canonical" href="https://herdeirosdapromessa.com/pagina/adquira_ja.html">
+    <link rel="canonical" href="https://herdeirosdapromessa.com.br/pagina/adquira_ja.html">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://herdeirosdapromessa.com/pagina/adquira_ja.html">
+    <meta property="og:url" content="https://herdeirosdapromessa.com.br/pagina/adquira_ja.html">
     <meta property="og:title" content="Adquira Já! — Herdeiros da Promessa | Oferta Especial">
     <meta property="og:description" content="Coleção completa de histórias bíblicas ilustradas para crianças com desconto exclusivo de lançamento.">
     
