--- a/produtos/index.html
+++ b/produtos/index.html
@@ -6,7 +6,7 @@
     <title>Produtos — Herdeiros da Promessa | Materiais Bíblicos para Crianças</title>
     <meta name="description" content="Explore nossa coleção exclusiva de histórias bíblicas ilustradas, materiais de alfabetização cristã e conteúdos educativos para crianças.">
     <meta name="keywords" content="produtos cristãos, materiais bíblicos, livros infantis cristãos, coleção bíblica">
-    <link rel="canonical" href="https://herdeirosdapromessa.com/produtos/">
+    <link rel="canonical" href="https://herdeirosdapromessa.com.br/produtos/">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script>
         window.location.href = '/pagina/produtos.html';
