--- a/pagina/adquira_ja.html
+++ b/pagina/adquira_ja.html
@@ -142,7 +142,7 @@
               id="videoAutoPlay"
               class="w-full h-auto max-h-[600px]"
               controls 
-              
+              aria-label="Vídeo de apresentação: Café com Deus - Transformando o futuro dos seus filhos através da fé e valores cristãos"
               playsinline
               preload="metadata"
               poster="files/adquira_ja/video_poster.jpg"
