--- a/pagina/ilustracoes_biblicas.html
+++ b/pagina/ilustracoes_biblicas.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NB6D5WMV');</script>
+    <!-- End Google Tag Manager -->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ilustrações Bíblicas — Herdeiros da Promessa</title>
@@ -35,9 +43,10 @@
     </script>
 </head>
 <body class="font-sans text-brand-text paper-texture overflow-x-hidden">
-
-<div data-include="nav"></div>
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB6D5WMV"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 <header class="relative min-h-[280px] flex items-center justify-center bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20 pb-12">
   <div class="container mx-auto px-6 text-center">
     <h1 class="font-serif text-4xl md:text-5xl font-bold mb-4">Ilustrações Bíblicas</h1>
@@ -111,7 +120,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="/pagina/adquira_ja.html" class="inline-flex items-center justify-center bg-brand-gold hover:bg-brand-gold-dark text-blue-900 px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl">
+          <a href="/adquira_ja" class="inline-flex items-center justify-center bg-brand-gold hover:bg-brand-gold-dark text-blue-900 px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl">
             <i data-lucide="shopping-cart" class="w-5 h-5 mr-2"></i>
             Adquirir Coleção
           </a>
@@ -187,7 +196,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="/pagina/adquira_ja.html" class="inline-flex items-center justify-center bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl">
+          <a href="/adquira_ja" class="inline-flex items-center justify-center bg-green-600 hover:bg-green-700 text-white px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl">
             <i data-lucide="shopping-cart" class="w-5 h-5 mr-2"></i>
             Adquirir Atividades
           </a>
@@ -257,7 +266,7 @@
         </div>
 
         <div class="flex justify-center">
-          <a href="/pagina/adquira_ja.html" class="inline-flex items-center justify-center bg-purple-600 hover:bg-purple-700 text-white px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl">
+          <a href="/adquira_ja" class="inline-flex items-center justify-center bg-purple-600 hover:bg-purple-700 text-white px-8 py-4 rounded-lg font-bold text-lg transition-all shadow-lg hover:shadow-xl">
             <i data-lucide="shopping-cart" class="w-5 h-5 mr-2"></i>
             Adquirir Coleção
           </a>
