--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -29,10 +29,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/pagina/styles.css">
     
     <!-- Google Analytics -->
-    <script src="js/analytics.js" defer></script>
+    <script src="/pagina/js/analytics.js" defer></script>
     
     <style>
       @keyframes glow-pulse {
@@ -154,12 +154,12 @@
               id="videoAutoPlay"
               class="w-full h-auto max-h-[600px]"
               controls 
-              aria-label="Vídeo de apresentação: Café com Deus - Transformando o futuro dos seus filhos através da fé e valores cristãos"
+              aria-label="Vídeo de apresentação: Descubra como nossas histórias bíblicas podem transformar a vida do seu filho"
               playsinline
               preload="metadata"
-              poster="files/adquira_ja/video_poster.jpg"
+              poster="/pagina/files/adquira_ja/video_poster.jpg"
             >
-              <source src="files/adquira_ja/video_cafe_com_deus.mp4" type="video/mp4">
+              <source src="/pagina/files/adquira_ja/postagem_real.mp4" type="video/mp4">
               Seu navegador não suporta a reprodução de vídeos.
             </video>
           </div>
@@ -174,7 +174,7 @@
       <!-- Botão de ação -->
       <div class="text-center mt-12">
         <a href="#comprar" class="inline-block bg-gradient-to-r from-green-500 to-green-600 text-white px-8 py-4 md:px-12 md:py-5 rounded-xl font-bold text-lg md:text-xl hover:from-green-600 hover:to-green-700 transition-all transform hover:-translate-y-1 hover:scale-105 shadow-2xl">
-          🎁 SIM, QUERO TRANSFORMAR O FUTURO DOS MEUS FILHOS!
+          🎁 EXPLORAR AS HISTÓRIAS E ILUSTRAÇÕES BÍBLICAS!
         </a>
         <p class="text-sm text-gray-600 mt-4">⚡ Oferta por tempo limitado • 💳 Acesso imediato</p>
       </div>
