--- a/conteudo_gratuito/index.html
+++ b/conteudo_gratuito/index.html
@@ -19,10 +19,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/pagina/styles.css">
     
     <!-- Google Analytics -->
-    <script src="js/analytics.js" defer></script>
+    <script src="/pagina/js/analytics.js" defer></script>
     
     <script>
       tailwind.config = {
