--- a/pagina/obrigado.html
+++ b/pagina/obrigado.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NB6D5WMV');</script>
+    <!-- End Google Tag Manager -->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obrigado pela sua compra! — Herdeiros da Promessa</title>
@@ -34,9 +42,10 @@
     </script>
 </head>
 <body class="font-sans text-brand-text paper-texture overflow-x-hidden">
-
-  <div data-include="nav"></div>
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB6D5WMV"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 <!-- HERO SECTION - Agradecimento -->
 <header class="relative min-h-[500px] flex items-center justify-center bg-gradient-to-br from-green-600 via-green-500 to-teal-600 text-white pt-20 pb-16 overflow-hidden">
   <div class="absolute inset-0 opacity-20">
