--- a/sobre-nos/index.html
+++ b/sobre-nos/index.html
@@ -1,10 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NB6D5WMV');</script>
+  <!-- End Google Tag Manager -->
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Redirecting...</title>
-  <script>window.location.href='/pagina/sobre_nos.html';</script>
+  <title>Sobre Nós — Herdeiros da Promessa</title>
+  <meta name="description" content="Conheça a missão da Herdeiros da Promessa: apresentar a Bíblia às crianças de forma suave, acolhedora e visualmente encantadora. A Palavra de Deus como a maior carta de amor.">
+  <meta name="keywords" content="sobre herdeiros da promessa, missão cristã, ensino bíblico infantil, educação cristã">
+  <link rel="canonical" href="https://herdeirosdapromessa.com.br/sobre-nos/">
+  <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <link rel="stylesheet" href="/pagina/styles.css">
+  
+  <!-- Google Analytics -->
+  <script src="/pagina/js/analytics.js" defer></script>
+  
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'brand-gold': '#F2C94C',
+            'brand-gold-dark': '#D4AF37',
+            'brand-blue': '#2D5B87',
+            'brand-cream': '#FDFBF7',
+            'brand-text': '#4A4A4A',
+          },
+          fontFamily: {
+            serif: ['Lora', 'serif'],
+            sans: ['Nunito', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
 </head>
-<body>Redirecionando...</body>
+<body class="font-sans text-brand-text paper-texture overflow-x-hidden">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB6D5WMV"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
+<div data-include="nav"></div>
+
+<header class="relative min-h-[200px] flex items-center justify-center bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20 pb-12">
+  <div class="container mx-auto px-6 text-center">
+    <h1 class="font-serif text-4xl md:text-5xl font-bold mb-4">Sobre Nós</h1>
+    <p class="max-w-2xl mx-auto text-blue-100">Nós acreditamos que a Bíblia é a maior carta de amor já escrita. Aqui buscamos apresentar a Palavra às crianças de forma suave, acolhedora e visualmente encantadora.</p>
+  </div>
+</header>
+
+<main class="container mx-auto px-6 py-12">
+  <section class="fade-in-section max-w-3xl mx-auto space-y-6">
+    <p class="text-gray-700 leading-relaxed">
+      Este projeto nasceu de um desejo sincero: ajudar pais, avós e educadores a apresentarem a Palavra de Deus às crianças de uma maneira que toque o coração. Sabemos que o mundo de hoje é cheio de ruídos; nosso objetivo é oferecer momentos de paz, beleza e verdade através da leitura.
+    </p>
+
+    <h2 class="font-serif text-2xl text-brand-blue font-bold">Nossa Missão</h2>
+    <p class="text-gray-700 leading-relaxed">
+      Criar materiais — e-books, livros e conteúdos digitais — que não apenas contem uma história, mas que revelem quem Deus é. Cada ilustração em aquarela, cada frase e cada personagem é desenvolvido com três pilares fundamentais:
+    </p>
+
+    <ul class="list-disc ml-6 text-gray-700 space-y-2">
+      <li><strong>Fidelidade Bíblica:</strong> A Bíblia é nossa fonte primária e inegociável.</li>
+      <li><strong>Linguagem Acessível:</strong> Traduzimos verdades profundas para o universo infantil sem perder a essência.</li>
+      <li><strong>Beleza que Inspira:</strong> Acreditamos que a arte deve refletir a beleza do Criador, despertando imaginação e ternura.</li>
+    </ul>
+
+    <h2 class="font-serif text-2xl text-brand-blue font-bold">Por que "Herdeiros da Promessa"?</h2>
+    <p class="text-gray-700 leading-relaxed">
+      Porque cremos na promessa antiga, feita aos profetas e cumprida em Jesus: a de que Deus estaria conosco. Queremos que cada criança que leia nossos livros saiba que ela também faz parte dessa história e que Cristo está com elas em todos os momentos — na alegria, nas dúvidas e até no choro.
+    </p>
+
+    <h2 class="font-serif text-2xl text-brand-blue font-bold">O Que Você Encontra Aqui</h2>
+    <ul class="text-gray-700 list-inside space-y-2">
+      <li>📚 <strong>E-books Ilustrados</strong>: Histórias completas para ler no tablet, celular ou computador.</li>
+      <li>🖨️ <strong>Atividades e Impressos</strong>: Materiais prontos para imprimir e colorir.</li>
+      <li>✨ <strong>Inspiração</strong>: Conteúdos nas nossas redes sociais para fortalecer a fé da sua família.</li>
+    </ul>
+  </section>
+</main>
+
+<footer class="bg-brand-blue text-white py-12 mt-12 border-t border-blue-800">
+  <div class="container mx-auto px-6 text-center">
+    <h3 class="font-serif text-2xl font-bold mb-4">Herdeiros da Promessa</h3>
+    <p class="text-blue-200 mb-8 max-w-md mx-auto">Criando memórias eternas através de histórias que transformam gerações.</p>
+    
+    <div class="flex justify-center gap-6 mb-8">
+      <a href="https://www.instagram.com/herdeirosdapromessa.t/" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="instagram" class="w-6 h-6"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=61584457560182" target="_blank" class="hover:text-brand-gold transition-colors"><i data-lucide="facebook" class="w-6 h-6"></i></a>
+      <a href="mailto:ternarius.lf@gmail.com" class="hover:text-brand-gold transition-colors"><i data-lucide="mail" class="w-6 h-6"></i></a>
+    </div>
+    
+    <p class="text-sm text-blue-300">
+      &copy; 2025 Herdeiros da Promessa. Todos os direitos reservados.
+    </p>
+  </div>
+</footer>
+
+<script src="/pagina/js/load-nav.js"></script>
+<script>
+  lucide.createIcons();
+  const observer = new IntersectionObserver((entries) => { 
+    entries.forEach(e => { 
+      if(e.isIntersecting) e.target.classList.add('is-visible'); 
+    }); 
+  }, {threshold:0.1});
+  document.querySelectorAll('.fade-in-section').forEach(s => observer.observe(s));
+</script>
+
+<!-- Botão Voltar ao Topo -->
+<button id="backToTop" class="fixed bottom-8 right-8 bg-brand-gold hover:bg-brand-gold-dark text-brand-blue p-4 rounded-full shadow-2xl opacity-0 invisible transition-all duration-300 z-50 hover:scale-110" style="z-index: 9999;" aria-label="Voltar ao topo">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+  </svg>
+</button>
+
+<script>
+  (function() {
+    const backToTopBtn = document.getElementById('backToTop');
+    if (backToTopBtn) {
+      window.addEventListener('scroll', function() {
+        if (window.pageYOffset > 300) {
+          backToTopBtn.style.opacity = '1';
+          backToTopBtn.style.visibility = 'visible';
+        } else {
+          backToTopBtn.style.opacity = '0';
+          backToTopBtn.style.visibility = 'hidden';
+        }
+      });
+      backToTopBtn.addEventListener('click', function() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    }
+  })();
+</script>
+</body>
 </html>
