--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -387,7 +387,7 @@
     <div class="bg-gradient-to-r from-green-600 to-teal-600 rounded-3xl p-8 md:p-12 shadow-2xl text-white text-center">
       <div class="max-w-3xl mx-auto">
         <div class="inline-block bg-yellow-400 text-green-900 px-6 py-2 rounded-full text-sm font-bold mb-6">
-          🎁 BÔNUS EXCLUSIVO
+          🎁 BÔNUS FUNDADOR EXCLUSIVO
         </div>
         <h2 class="font-serif text-3xl md:text-5xl font-bold mb-6">
           Atualizações Gratuitas Vitalícias!
