livro de colorir

--- a/conteudo_gratuito/index.html
+++ b/conteudo_gratuito/index.html
@@ -52,7 +52,7 @@
 <header class="relative min-h-[280px] flex items-center justify-center bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20 pb-12">
   <div class="container mx-auto px-6 text-center">
     <div class="inline-block bg-brand-gold text-blue-900 px-6 py-2 rounded-full font-bold text-lg mb-4">
-      🎁 MATERIAL GRATUITO DE DEZEMBRO
+      🎁 MATERIAL GRATUITO DE JANEIRO
     </div>
     <h1 class="font-serif text-4xl md:text-5xl font-bold mb-4">Conteúdo Gratuito</h1>
     <p class="max-w-2xl mx-auto text-blue-100 text-lg">
@@ -92,43 +92,43 @@
             <i data-lucide="book-open" class="w-8 h-8 text-brand-blue"></i>
           </div>
           <div>
-            <h2 class="font-serif text-3xl md:text-4xl text-brand-blue font-bold">O Menino que Mudou o Mundo</h2>
-            <p class="text-brand-gold font-semibold">E-book de História Gratuito • Dezembro 2025</p>
+            <h2 class="font-serif text-3xl md:text-4xl text-brand-blue font-bold">A Bíblia em Cores - Levítico</h2>
+            <p class="text-brand-gold font-semibold">Livro de Colorir Gratuito • Janeiro 2026</p>
           </div>
         </div>
 
         <div class="grid md:grid-cols-2 gap-8 mb-8">
           <div>
-            <img src="/pagina/files/historias_biblicas/natal/o_menino_que_mudou_o_mundo_pt1.png" alt="O Menino que Mudou o Mundo" class="rounded-xl shadow-lg object-cover w-full">
+            <img src="/pagina/files/ilustracoes_biblicas/biblia_em_cores/genesis/levitico_gratis.png" alt="A Bíblia em Cores - Levítico" class="rounded-xl shadow-lg object-cover w-full">
           </div>
           <div>
             <p class="text-lg text-gray-700 mb-6 leading-relaxed">
-              Uma história inspiradora sobre fé, coragem e o poder transformador de uma vida dedicada a Deus. 
-              Perfeita para ensinar às crianças que elas também podem fazer a diferença no mundo!
+              Um livro de colorir especial com versículos e ensinamentos do livro de Levítico adaptados para crianças. 
+              Perfeito para ensinar às crianças sobre santidade, obediência e a importância de seguir a Palavra de Deus!
             </p>
 
             <div class="bg-blue-50 border-l-4 border-brand-blue p-5 rounded-lg mb-6">
-              <h3 class="font-bold text-brand-blue mb-3">📖 Por que baixar este e-book?</h3>
+              <h3 class="font-bold text-brand-blue mb-3">🎨 Por que baixar este livro de colorir?</h3>
               <ul class="space-y-2 text-gray-700 text-sm">
                 <li class="flex items-start">
                   <span class="text-brand-gold mr-2">✓</span>
-                  <span>História bíblica adaptada para crianças de 4 a 10 anos</span>
+                  <span>Ensinamentos de Levítico adaptados para crianças de 4 a 10 anos</span>
                 </li>
                 <li class="flex items-start">
                   <span class="text-brand-gold mr-2">✓</span>
-                  <span>Ilustrações em aquarela de alta qualidade</span>
+                  <span>Ilustrações bíblicas para colorir e aprender</span>
                 </li>
                 <li class="flex items-start">
                   <span class="text-brand-gold mr-2">✓</span>
-                  <span>Linguagem acessível e envolvente</span>
+                  <span>Desenvolve criatividade e concentração</span>
                 </li>
                 <li class="flex items-start">
                   <span class="text-brand-gold mr-2">✓</span>
-                  <span>Mensagens de fé e valores cristãos</span>
+                  <span>Ensina sobre santidade e obediência a Deus</span>
                 </li>
                 <li class="flex items-start">
                   <span class="text-brand-gold mr-2">✓</span>
-                  <span>Formato digital para ler em qualquer dispositivo</span>
+                  <span>Formato digital para imprimir e colorir</span>
                 </li>
               </ul>
             </div>
@@ -139,9 +139,9 @@
           <h3 class="font-bold text-brand-blue mb-3 text-lg">🌟 Benefícios do Material:</h3>
           <div class="flex flex-wrap gap-2">
             <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Fortalece a Fé</span>
-            <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Ensina Valores</span>
-            <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Momento em Família</span>
-            <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Ensina o verdadeiro espírito do Natal</span>
+            <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Ensina Santidade</span>
+            <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Desenvolve Criatividade</span>
+            <span class="bg-blue-100 text-brand-blue px-4 py-2 rounded-full text-sm font-semibold">Aprendizado através da Arte</span>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
           </div>
           <div>
             <h2 class="font-serif text-3xl md:text-4xl text-purple-700 font-bold">Planner semanal Herdeiros da Promessa</h2>
-            <p class="text-brand-gold font-semibold">Planner para registrar as atividades com seu filho • Dezembro 2025</p>
+            <p class="text-brand-gold font-semibold">Planner para registrar as atividades com seu filho • Janeiro 2026</p>
           </div>
         </div>
 
@@ -254,9 +254,9 @@
             <a href="https://drive.google.com/file/d/1YduedSeFQeXgBFhkUqgZZuyT7xnNqbcQ/view" target="_blank" class="block bg-white hover:bg-gray-50 text-brand-blue px-8 py-4 rounded-lg font-bold text-center transition-all shadow-lg hover:shadow-xl">
               <div class="flex items-center justify-center gap-2">
                 <i data-lucide="download" class="w-5 h-5"></i>
-                <span>Baixar E-book</span>
+                <span>Baixar Livro de Colorir</span>
               </div>
-              <p class="text-xs text-gray-600 mt-1">O Menino que Mudou o Mundo</p>
+              <p class="text-xs text-gray-600 mt-1">A Bíblia em Cores - Levítico</p>
             </a>
 
             <a href="https://drive.google.com/file/d/1hJRzqHlgDdw-u1vlIaSBVU5ere4mR0Z8/view?usp=sharing" target="_blank" class="block bg-white hover:bg-gray-50 text-purple-700 px-8 py-4 rounded-lg font-bold text-center transition-all shadow-lg hover:shadow-xl">
