--- a/ilustracoes_biblicas/index.html
+++ b/ilustracoes_biblicas/index.html
@@ -47,6 +47,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB6D5WMV"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <div data-include="nav"></div>
+
 <header class="relative min-h-[280px] flex items-center justify-center bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20 pb-12">
   <div class="container mx-auto px-6 text-center">
     <h1 class="font-serif text-4xl md:text-5xl font-bold mb-4">Ilustrações Bíblicas</h1>
