--- a/conteudo_gratuito/index.html
+++ b/conteudo_gratuito/index.html
@@ -49,6 +49,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB6D5WMV"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <div data-include="nav"></div>
+
 <header class="relative min-h-[280px] flex items-center justify-center bg-gradient-to-b from-blue-900 to-brand-blue text-white pt-20 pb-12">
   <div class="container mx-auto px-6 text-center">
     <div class="inline-block bg-brand-gold text-blue-900 px-6 py-2 rounded-full font-bold text-lg mb-4">
