Padronização de estrutura: adiciona menu nas páginas, move obrigado/ para estrutura padrão, atualiza 404.html, remove duplicatas da pasta pagina/, adiciona keywords SEO em todas as páginas

--- a/contato/index.html
+++ b/contato/index.html
@@ -12,6 +12,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Contato — Herdeiros da Promessa</title>
+  <meta name="description" content="Entre em contato com Herdeiros da Promessa. Tire suas dúvidas, faça sugestões ou nos envie uma mensagem sobre nossos materiais bíblicos.">
+  <meta name="keywords" content="contato herdeiros da promessa, falar com herdeiros, suporte materiais bíblicos, contato materiais cristãos, atendimento cristão, dúvidas materiais bíblicos">
   <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
