--- a/produtos/index.html
+++ b/produtos/index.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Herdeiros da Promessa | Coleção Exclusiva</title>
+    <meta name="description" content="Conheça nossa coleção completa de histórias bíblicas ilustradas, materiais de alfabetização cristã e recursos educativos para ensinar a Palavra de Deus às crianças.">
+    <meta name="keywords" content="histórias bíblicas, ilustrações bíblicas, alfabetização cristã, ensino bíblico infantil, materiais cristãos para crianças, Bíblia para crianças, coleção bíblica, livros cristãos, educação religiosa, atividades bíblicas">
     
     <!-- Importando Tailwind CSS (Framework de Estilo Moderno) -->
     <script src="https://cdn.tailwindcss.com"></script>
