--- a/historias_biblicas/index.html
+++ b/historias_biblicas/index.html
@@ -11,7 +11,9 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histórias Bíblicas — Herdeiros da Promessa</title>
+    <title>Herdeiros da Promessa - E-books de Histórias Bíblicas Infantis</title>
+    <meta name="description" content="Histórias bíblicas ilustradas exclusivas para crianças. Coleções completas com narrativas que ensinam, emocionam e aproximam de Deus.">
+    <meta name="keywords" content="histórias bíblicas infantis, histórias bíblicas ilustradas, contos bíblicos para crianças, narrativas bíblicas, histórias da Bíblia, livros bíblicos infantis, ensino bíblico, educação cristã infantil, personagens bíblicos">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
