--- a/ilustracoes_biblicas/index.html
+++ b/ilustracoes_biblicas/index.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ilustrações Bíblicas — Herdeiros da Promessa</title>
+    <meta name="description" content="Ilustrações bíblicas de alta qualidade para ensinar verdades eternas de forma criativa e envolvente. Recursos visuais para educação cristã.">
+    <meta name="keywords" content="ilustrações bíblicas, imagens bíblicas, desenhos bíblicos, atividades bíblicas ilustradas, Bíblia ilustrada, livros para colorir bíblicos, recursos visuais bíblicos, arte bíblica infantil, ilustrações cristãs">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
