--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -11,8 +11,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adquira Já! — Herdeiros da Promessa | Oferta Especial de Lançamento</title>
-    <meta name="description" content="Adquira a coleção completa de histórias bíblicas ilustradas para crianças. Oferta especial de lançamento com desconto exclusivo. Materiais educativos cristãos de alta qualidade.">
+    <title>Herdeiros da Promessa | E-books Bíblicos Infantis Para Ler e Colorir - Adquira Já!</title>
+    <meta name="description" content="Adquira a coleção completa de E-books de histórias ilustradas e atividades bíblicas para as crianças colorir. Oferta especial de lançamento com desconto FUNDADOR exclusivo. Materiais educativos cristãos de alta qualidade e fieis a bíblia.">
     <meta name="keywords" content="comprar histórias bíblicas, coleção bíblica infantil, materiais cristãos, livros bíblicos para crianças, oferta histórias bíblicas, livros para colorir bíblicos, e-books cristão,
     histórias bíblicas ilustradas, atividades bíblicas para crianças, a bíblia em cores, alfabetização cristã, ensino bíblico infantil,
     materiais educativos cristãos, promoção lançamento livros bíblicos, livros para pintar cristãos, devocionais infantis, oração para crianças, valores cristãos para crianças,
