--- a/contato/index.html
+++ b/contato/index.html
@@ -11,7 +11,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Contato — Herdeiros da Promessa</title>
+  <title>Herdeiros da Promessa | E-books Bíblicos Infantis Para Ler e Colorir - Contato</title>
   <meta name="description" content="Entre em contato com Herdeiros da Promessa. Tire suas dúvidas, faça sugestões ou nos envie uma mensagem sobre nossos materiais bíblicos.">
   <meta name="keywords" content="contato herdeiros da promessa, falar com herdeiros, suporte materiais bíblicos, contato materiais cristãos, atendimento cristão, dúvidas materiais bíblicos">
   <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
