--- a/conteudo_gratuito/index.html
+++ b/conteudo_gratuito/index.html
@@ -11,8 +11,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conteúdo Gratuito — Herdeiros da Promessa | Materiais Bíblicos Grátis</title>
-    <meta name="description" content="Baixe gratuitamente histórias bíblicas ilustradas, atividades de alfabetização cristã e materiais educativos para ensinar a Palavra de Deus às crianças.">
+    <title>Herdeiros da Promessa | E-books Bíblicos Infantis Para Ler e Colorir - Conteúdo Gratuito</title>
+    <meta name="description" content="Baixe gratuitamente E-books de histórias bíblicas ilustradas, atividades de alfabetização e pintura cristã, além de materiais educativos para ensinar a Palavra de Deus às crianças.">
     <meta name="keywords" content="materiais bíblicos grátis, histórias bíblicas gratuitas, atividades cristãs para crianças, download materiais cristãos">
     <link rel="canonical" href="https://herdeirosdapromessa.com.br/conteudo_gratuito">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
