--- a/historias_biblicas/index.html
+++ b/historias_biblicas/index.html
@@ -11,8 +11,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Herdeiros da Promessa - E-books de Histórias Bíblicas Infantis</title>
-    <meta name="description" content="Histórias bíblicas ilustradas exclusivas para crianças. Coleções completas com narrativas que ensinam, emocionam e aproximam de Deus.">
+    <title>Herdeiros da Promessa | E-books Bíblicos Infantis Para Ler e Colorir - Histórias Bíblicas Exclusivas</title>
+    <meta name="description" content="E-books de histórias bíblicas ilustradas exclusivas para crianças. Coleções completas com narrativas que ensinam, emocionam e aproximam de Deus.">
     <meta name="keywords" content="histórias bíblicas infantis, histórias bíblicas ilustradas, contos bíblicos para crianças, narrativas bíblicas, histórias da Bíblia, livros bíblicos infantis, ensino bíblico, educação cristã infantil, personagens bíblicos">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
