--- a/ilustracoes_biblicas/index.html
+++ b/ilustracoes_biblicas/index.html
@@ -11,8 +11,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ilustrações Bíblicas — Herdeiros da Promessa</title>
-    <meta name="description" content="Ilustrações bíblicas de alta qualidade para ensinar verdades eternas de forma criativa e envolvente. Recursos visuais para educação cristã.">
+    <title>Herdeiros da Promessa | E-books Bíblicos Infantis Para Ler e Colorir - Ilustrações Bíblicas</title>
+    <meta name="description" content="E-books de ilustrações bíblicas de alta qualidade para pintar e ensinar verdades eternas de forma criativa e envolvente. Recursos visuais para educação cristã.">
     <meta name="keywords" content="ilustrações bíblicas, imagens bíblicas, desenhos bíblicos, atividades bíblicas ilustradas, Bíblia ilustrada, livros para colorir bíblicos, recursos visuais bíblicos, arte bíblica infantil, ilustrações cristãs">
     <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
