--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -227,7 +227,7 @@
             📚 HISTÓRIAS BÍBLICAS
           </div>
           <h2 class="font-serif text-3xl md:text-4xl font-bold text-brand-blue mb-6">
-            Histórias que Ensinam e Transformam
+            E-books de Histórias que Ensinam e Transformam
           </h2>
           
           <div class="space-y-4 mb-6">
@@ -290,7 +290,7 @@
             🎨 ILUSTRAÇÕES E ATIVIDADES
           </div>
           <h2 class="font-serif text-3xl md:text-4xl font-bold text-brand-blue mb-6">
-            Aprenda Brincando com Atividades Incríveis
+            E-books Incríveis para Colorir e Aprender
           </h2>
           
           <div class="space-y-4 mb-6">
