remoção texto indevido

--- a/adquira_ja/index.html
+++ b/adquira_ja/index.html
@@ -100,7 +100,7 @@
     </div>
     
     <h1 class="font-serif text-4xl md:text-6xl lg:text-7xl font-bold mb-6 leading-tight">
-      Transforme o Futuro <br>dos Seus Filhos <span class="text-brand-gold italic">Hoje!</span>k
+      Transforme o Futuro <br>dos Seus Filhos <span class="text-brand-gold italic">Hoje!</span>
     </h1>
     
     <p class="text-xl md:text-2xl text-blue-100 max-w-3xl mx-auto mb-8 leading-relaxed">
