--- a/colorir/index.html
+++ b/colorir/index.html
@@ -24,20 +24,21 @@
     <title>Ilustrações Bíblicas para Colorir - Herdeiros da Promessa</title>
     <meta name="description" content="E-books de ilustrações bíblicas para colorir. Bíblia em cores, atividades educativas e diversão cristã para crianças de 3 a 10 anos.">
     <meta name="keywords" content="ilustrações bíblicas, colorir, atividades cristãs, crianças, bíblia em cores, educação cristã">
-    
+    <link rel="icon" href="/pagina/files/favcon.png" type="image/png">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://herdeiros-promessa.site/colorir/">
+    <meta property="og:url" content="https://herdeirosdapromessa.com.br/colorir/">
     <meta property="og:title" content="Ilustrações Bíblicas para Colorir - Herdeiros da Promessa">
     <meta property="og:description" content="E-books de ilustrações bíblicas para colorir. Bíblia em cores e atividades educativas para crianças.">
-    <meta property="og:image" content="https://herdeiros-promessa.site/pagina/files/adquira_ja/imagens_amostra/colorir/capa_genesis.png">
+    <meta property="og:image" content="https://herdeirosdapromessa.com.br/pagina/files/adquira_ja/imagens_amostra/colorir/capa_genesis.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://herdeiros-promessa.site/colorir/">
+    <meta property="twitter:url" content="https://herdeirosdapromessa.com.br/colorir/">
     <meta property="twitter:title" content="Ilustrações Bíblicas para Colorir - Herdeiros da Promessa">
     <meta property="twitter:description" content="E-books de ilustrações bíblicas para colorir. Bíblia em cores e atividades educativas para crianças.">
-    <meta property="twitter:image" content="https://herdeiros-promessa.site/pagina/files/adquira_ja/imagens_amostra/colorir/capa_genesis.png">
+    <meta property="twitter:image" content="https://herdeirosdapromessa.com.br/pagina/files/adquira_ja/imagens_amostra/colorir/capa_genesis.png">
 
     <!-- Dados Estruturados de Produto -->
     <meta property="product:price:amount" content="9.90">
